tests/integration/errors/private_mod.rsg
// SKIP: module file, not a standalone test

fn secret() -> i32 { 42 }
